2006-09-21  Aaron Bockover  <abock@gnome.org>

	* Makefile.am: Added run target

2006-09-21  Aaron Bockover  <abock@gnome.org>

	* src/Banshee.Base/PlayerEngineCore.cs:
	* src/Banshee.Base/Plugins/PluginCore.cs: Do not try to load plugins
	from their system installation path if their respective override 
	environment variable is set

2006-09-21  Aaron Bockover  <abock@gnome.org>

	* Makefile.include: Broken down even more, added a variable for 
	making running uninstalled easy

	* src/Makefile.am: Use new RUN_PATH variable to run banshee --uninstalled

	* banshee.in: Do not set MONO_PATH; is done in Makefile with RUN_PATH

	* src/Banshee.Base/Plugins/PluginFactory.cs: AddScanDirectory supports
	recursion now, overloads to turn it off, and added new method for
	loading plugins: AddScanDirectoryFromEnvironmentVariable

	* src/Banshee.Base/PlayerEngineCore.cs: BANSHEE_ENGINES_PATH env
	can be set for loading engines from an alternative path

	* src/Banshee.Base/Plugins/PluginCore.cs: BANSHEE_PLUGINS PATH does
	the same, for plugins

2006-09-21  Alp Toker  <alp@atoker.com>

	* src/Banshee.Base/PowerManagement.cs: Use managed dbus for gpm client

2006-09-21  Aaron Bockover  <abock@gnome.org>

	* Makefile.include: The new global build magic

	* All Makefile.am: use new Makefile.include, build system is now much
	simpler and more flexible

	* src/PlayerInterface.cs: Remove unused namespace

2006-09-21  Alp Toker  <alp@atoker.com>

	* src/Banshee.Base/PowerManagement.cs: IPowerManager for managed dbus

2006-09-21  Alp Toker  <alp@atoker.com>

	* src/Main.cs:
	* src/Banshee.Base/DBusRemote.cs:
	* src/Banshee.Base/DBusPlayer.cs: Use managed dbus for client as well

2006-09-21  Alp Toker  <alp@atoker.com>

	* src/Banshee.Base/DBusRemote.cs:
	* src/Banshee.Base/DBusPlayer.cs: Start to make use of managed dbus

2006-09-20  Aaron Bockover  <abock@gnome.org>

	* Makefile.am:
	* configure.ac:
	* dbus-sharp: Added new managed version of dbus-sharp; much to change here
