@@ -1,3 +1,7 @@
+2006-09-21  Alp Toker  <alp@atoker.com>
+
+	* tools/BansheeDBusClient.cs: Use managed dbus for example client
+
 2006-09-21  Aaron Bockover  <abock@gnome.org>
 
 	* Makefile.am: Added run target
